디자인 업데이트

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <input type="number" id="stdDev" placeholder="표준편차" required>
         <input type="number" id="totalStudents" placeholder="학생수" required>
         <br>
-        <button onclick="calculateRank()">계산하기</button>
+        <button onclick="calculateRank()">계산</button>
 
         <h2 id="result"></h2>
     </div>
