--- a/index.html
+++ b/index.html
@@ -1,38 +1,152 @@
-function calculateRank() {
-    const score = parseFloat(document.getElementById("score").value);
-    const avg = parseFloat(document.getElementById("avg").value);
-    const stdDev = parseFloat(document.getElementById("stdDev").value);
-    const totalStudents = parseInt(document.getElementById("totalStudents").value);
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>석차 계산기</title>
+    <style>
+        @font-face {
+            font-family: 'HakgyoansimGeurimilgiTTF-R';
+            src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimGeurimilgiTTF-R.woff2') format('woff2');
+            font-weight: normal;
+            font-style: normal;
+        }
 
-    // z-score 계산
-    const zScore = (score - avg) / stdDev;
-    const percentileRank = 0.5 * (1 + erf(zScore / Math.sqrt(2))) * 100;
+        body {
+            font-family: 'HakgyoansimGeurimilgiTTF-R', Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
 
-    // 석차 계산
-    const rank = Math.round(totalStudents * (1 - percentileRank / 100));
+        .calculator-container {
+            background: #ffffff;
+            padding: 30px 40px;
+            border-radius: 15px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+            text-align: center;
+            max-width: 500px;
+            width: 90%;
+        }
 
-    // 상위 퍼센트 계산
-    const topPercent = ((totalStudents - rank + 1) / totalStudents) * 100;
+        h1 {
+            font-size: 2.8rem;
+            color: #333;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+        }
 
-    // 결과 표시
-    document.getElementById("result").innerHTML = 
-        `전체 ${totalStudents}명 중 <span class="result-highlight">${rank}등</span>이며, 상위 <span class="result-highlight">${topPercent.toFixed(2)}%</span>입니다.`;
-}
+        p {
+            font-size: 1.2rem;
+            margin-bottom: 20px;
+            color: #555;
+        }
 
-// Error function approximation
-function erf(x) {
-    const a1 = 0.254829592;
-    const a2 = -0.284496736;
-    const a3 = 1.421413741;
-    const a4 = -1.453152027;
-    const a5 = 1.061405429;
-    const p = 0.3275911;
+        input {
+            font-family: inherit;
+            font-size: 1.2rem;
+            padding: 10px;
+            width: 80%;
+            margin: 10px 0;
+            border: 2px solid #ddd;
+            border-radius: 10px;
+            box-sizing: border-box;
+            transition: all 0.3s ease;
+        }
 
-    const sign = x < 0 ? -1 : 1;
-    x = Math.abs(x);
+        input:focus {
+            outline: none;
+            border-color: #ff79c6;
+            box-shadow: 0 0 8px rgba(255, 121, 198, 0.5);
+        }
 
-    const t = 1 / (1 + p * x);
-    const y = 1 - (((((a5 * t + a4) * t) + a3) * t + a2) * t + a1) * t * Math.exp(-x * x);
+        button {
+            font-family: inherit;
+            font-size: 1.2rem;
+            padding: 10px 20px;
+            background-color: #ff79c6;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
 
-    return sign * y;
-}
+        button:hover {
+            background-color: #ff47b2;
+            box-shadow: 0 4px 10px rgba(255, 121, 198, 0.5);
+        }
+
+        h2 {
+            font-size: 1.5rem;
+            color: #333;
+            margin-top: 20px;
+        }
+
+        .result-highlight {
+            color: #ff79c6;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <div class="calculator-container">
+        <h1>석차 계산기</h1>
+        <p>원점수, 과목평균, 표준편차, 학생 수를 입력하세요:</p>
+        
+        <input type="number" id="score" placeholder="원점수" required><br>
+        <input type="number" id="avg" placeholder="과목평균" required>
+        <input type="number" id="stdDev" placeholder="표준편차" required>
+        <input type="number" id="totalStudents" placeholder="학생수" required>
+        <br>
+        <button onclick="calculateRank()">계산하기</button>
+
+        <h2 id="result"></h2>
+    </div>
+
+    <script>
+        function calculateRank() {
+            const score = parseFloat(document.getElementById("score").value);
+            const avg = parseFloat(document.getElementById("avg").value);
+            const stdDev = parseFloat(document.getElementById("stdDev").value);
+            const totalStudents = parseInt(document.getElementById("totalStudents").value);
+
+            // z-score 계산
+            const zScore = (score - avg) / stdDev;
+            const percentileRank = 0.5 * (1 + erf(zScore / Math.sqrt(2))) * 100;
+
+            // 석차 계산
+            const rank = Math.round(totalStudents * (1 - percentileRank / 100));
+
+            // 상위 퍼센트 계산
+            const topPercent = ((totalStudents - rank + 1) / totalStudents) * 100;
+
+            // 결과 표시
+            document.getElementById("result").innerHTML = 
+                `전체 ${totalStudents}명 중 <span class="result-highlight">${rank}등</span>이며, 상위 <span class="result-highlight">${topPercent.toFixed(2)}%</span>입니다.`;
+        }
+
+        // Error function approximation
+        function erf(x) {
+            const a1 = 0.254829592;
+            const a2 = -0.284496736;
+            const a3 = 1.421413741;
+            const a4 = -1.453152027;
+            const a5 = 1.061405429;
+            const p = 0.3275911;
+
+            const sign = x < 0 ? -1 : 1;
+            x = Math.abs(x);
+
+            const t = 1 / (1 + p * x);
+            const y = 1 - (((((a5 * t + a4) * t) + a3) * t + a2) * t + a1) * t * Math.exp(-x * x);
+
+            return sign * y;
+        }
+    </script>
+</body>
+</html>
